log
Wed Mar 25 02:05:30 PM UTC 2026: 
 list.c | 9 +++++++++
 1 file changed, 9 insertions(+)
Compilation failed
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:38:9: error: ‘list’ undeclared (first use in this function); did you mean ‘List’?
   38 |         list->head = NULL ;
      |         ^~~~
      |         List
list.c:38:9: note: each undeclared identifier is reported only once for each function it appears in
bfc2cbf
Wed Mar 25 02:05:48 PM UTC 2026: 
 list.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
 tests:  1|5
total_score: 10/60
952a0ef
Wed Mar 25 02:09:27 PM UTC 2026: 
 list.c | 13 +++++++++++--
 1 file changed, 11 insertions(+), 2 deletions(-)
Compilation failed
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:52:9: error: ‘lista’ undeclared (first use in this function); did you mean ‘list’?
   52 |     if (lista)
      |         ^~~~~
      |         list
list.c:52:9: note: each undeclared identifier is reported only once for each function it appears in
list.c: In function ‘nextList’:
list.c:63:9: error: ‘lista’ undeclared (first use in this function); did you mean ‘list’?
   63 |     if (lista)
      |         ^~~~~
      |         list
a919aa9
Wed Mar 25 02:10:10 PM UTC 2026: 
 list.c | 12 ++++++------
 1 file changed, 6 insertions(+), 6 deletions(-)
 tests:  1|5
total_score: 10/60
d3712f2
Wed Mar 25 02:12:30 PM UTC 2026: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
Compilation failed
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:55:31: error: ‘Node’ has no member named ‘dato’; did you mean ‘data’?
   55 |         return list->current->dato ;
      |                               ^~~~
      |                               data
list.c: In function ‘nextList’:
list.c:66:31: error: ‘Node’ has no member named ‘dato’; did you mean ‘data’?
   66 |         return list->current->dato ;
      |                               ^~~~
      |                               data
bcb8013
Wed Mar 25 02:12:44 PM UTC 2026: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
fc73eac
Wed Mar 25 02:14:53 PM UTC 2026: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
407a8dd
Wed Mar 25 02:16:06 PM UTC 2026: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
915c55c
Wed Mar 25 02:24:46 PM UTC 2026: 
 list.c | 12 ++++++++++--
 1 file changed, 10 insertions(+), 2 deletions(-)
 tests:  0|0
b0d414f
Wed Mar 25 02:31:47 PM UTC 2026: 
 list.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  5|4
total_score: 20/60
2665db4
Wed Mar 25 02:33:26 PM UTC 2026: 
 list.c | 9 +++------
 1 file changed, 3 insertions(+), 6 deletions(-)
 tests:  5|4
total_score: 20/60
e6e408a
Wed Mar 25 02:39:20 PM UTC 2026: 
 list.c | 12 ++++++++++++
 1 file changed, 12 insertions(+)
 tests:  6|4
total_score: 20/60
a9a4046
Wed Mar 25 02:41:49 PM UTC 2026: 
 list.c | 10 ++++++++++
 1 file changed, 10 insertions(+)
 tests:  6|4
total_score: 20/60
d278edf
Wed Mar 25 02:42:38 PM UTC 2026: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  9|3
total_score: 30/60
b782830
Wed Mar 25 02:47:22 PM UTC 2026: 
 list.c | 9 +++++++++
 1 file changed, 9 insertions(+)
 tests:  9|3
total_score: 30/60
2866928
Wed Mar 25 02:50:00 PM UTC 2026: 
 list.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  9|3
total_score: 30/60
1d15a61
